rough version for test.

--- a/etc/card.conf
+++ b/etc/card.conf
@@ -3,3 +3,14 @@ callee_config=etc/callee.conf
 
 [Log]
 log_config=etc/card_log.conf
+
+[Wheel]
+front_left_forward=38
+front_left_backward=40
+front_right_forward=32
+front_right_backward=36
+back_left_forward=35
+back_left_backward=37
+back_right_forward=31
+back_right_backward=33
+
