1.make log dir automatically; 2.redirect web.py output to log

--- a/etc/card_log.conf
+++ b/etc/card_log.conf
@@ -12,7 +12,7 @@ level=DEBUG
 handlers=rotating_file_handler
 
 [handler_rotating_file_handler]
-class=logging.handlers.RotatingFileHandler
+class=rpicard.logutil.CustomRotatingFileHandler
 level=DEBUG
 formatter=simple_formatter
 args=('/tmp/rpicard/card.log', 'a', 10000000, 5, 'UTF8', 1)
