--- a/etc/rpicard_log.conf
+++ b/etc/rpicard_log.conf
@@ -12,7 +12,7 @@ level=DEBUG
 handlers=rotating_file_handler
 
 [handler_rotating_file_handler]
-class=handlers.RotatingFileHandler
+class=rpicard.logutil.CustomRotatingFileHandler
 level=DEBUG
 formatter=simple_formatter
 args=('/tmp/rpicard/rpicard.log', 'a', 10000000, 5, 'UTF8', 1)
